load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "lexer_test",
    srcs = ["lexer_test.cpp"],
    deps = [
        "//hls:hls",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
);

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = [
        "//hls:hls",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
);
